@@ -33,6 +33,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Locale;
+import java.util.function.Consumer;
 import java.util.stream.Stream;
 
 /**
@@ -148,7 +149,7 @@ public final class StreamUtil {
                 FileUtil.deleteFile(file);
             }
             Files.createDirectories(file.getParent());
-            Files.write(file, string.getBytes(charset));
+            Files.writeString(file, string, charset);
         } catch (final IOException ioEx) {
             // Wrap it
             throw new UncheckedIOException(ioEx);
@@ -237,7 +238,6 @@ public final class StreamUtil {
      *
      * @param fromFile the Path to copy (readable, non-null file)
      * @param toFile   the Path to copy to (non-null, parent dir exists)
-     * @throws IOException
      */
     public static void copyFile(final Path fromFile, final Path toFile) throws IOException {
         Files.copy(fromFile, toFile);
@@ -247,19 +247,24 @@ public final class StreamUtil {
      * Take a stream to another stream.
      */
     public static long streamToStream(final InputStream inputStream, final OutputStream outputStream) {
-        return streamToStream(inputStream, outputStream, new byte[BUFFER_SIZE]);
+        return streamToStream(inputStream, outputStream, new byte[BUFFER_SIZE], bytesWritten -> {
+        });
     }
 
     /**
      * Take a stream to another stream.
      */
-    public static long streamToStream(final InputStream inputStream, final OutputStream outputStream, final byte[] buffer) {
+    public static long streamToStream(final InputStream inputStream,
+                                      final OutputStream outputStream,
+                                      final byte[] buffer,
+                                      final Consumer<Long> progressConsumer) {
         long bytesWritten = 0;
         try {
             int len;
             while ((len = inputStream.read(buffer)) != -1) {
                 outputStream.write(buffer, 0, len);
                 bytesWritten += len;
+                progressConsumer.accept(bytesWritten);
             }
             return bytesWritten;
         } catch (final IOException ioEx) {
@@ -298,7 +303,7 @@ public final class StreamUtil {
      * @throws IOException if error
      */
     public static int eagerRead(final InputStream stream, final byte[] buffer) throws IOException {
-        int read = 0;
+        int read;
         int offset = 0;
         int remaining = buffer.length;
         while (remaining > 0 && (read = stream.read(buffer, offset, remaining)) != -1) {
